--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "scripts": {
     "start": "electron .",
+    "lint": "eslint .",
+    "test": "npm run lint",
     "build": "npm run build64 && npm run build32",
     "build64": "npm run build:macos && npm run build:linux && npm run build:windows64",
     "build32": "npm run build:linux32 && npm run build:windows",
@@ -27,11 +29,14 @@
   ],
   "devDependencies": {
     "devtron": "^1.3.0",
-    "electron": "^1.3.3",
     "electron-packager": "^7.6.0",
+    "eslint": "^3.3.1",
+    "eslint-config-airbnb-base": "^5.0.3",
+    "eslint-plugin-import": "^1.13.0",
     "os": "^0.1.1"
   },
   "dependencies": {
+    "electron": "^1.3.3",
     "electron-config": "^0.2.1",
     "electron-debug": "^1.0.1",
     "element-ready": "^0.2.0"
