--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
   },
   "scripts": {
     "start": "electron .",
-    "build": "npm run test && npm run build:osx64",
-    "build:web": "cross-env NODE_ENV=production webpack -p",
-    "build:osx64": "./scripts/build.sh darwin x64",
+    "build:osx64": "npm run test && ./scripts/build:masos.sh",
     "lint": "eslint .",
     "test": "npm run lint"
   },
@@ -25,9 +23,9 @@
   "devDependencies": {
     "devtron": "^1.3.0",
     "electron-packager": "^7.6.0",
-    "eslint": "^3.3.1",
+    "eslint": "^3.4.0",
     "eslint-config-airbnb-base": "^5.0.3",
-    "eslint-plugin-import": "^1.13.0",
+    "eslint-plugin-import": "^1.14.0",
     "os": "^0.1.1"
   },
   "dependencies": {
