--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "build:macos": "npm run test && electron-packager . --overwrite --asar --out=dist --ignore='^media$' --prune --platform=darwin --arch=x64 --icon=static/icon.icns --app-bundle-id=com.terkel.ramme --osx-sign --app-version=$npm_package_version && cd dist/Ramme-darwin-x64 && zip -ryXq9 ../Ramme-osx-${npm_package_version}.zip Ramme.app",
     "build:linux": "npm run test && electron-packager . --overwrite --out=dist --ignore='^media$' --prune --platform=linux --arch=x64 --app-bundle-id=com.terkel.ramme --app-version=$npm_package_version && cd dist/Ramme-linux-x64/ && zip -ryq9 ../Ramme-linux-${npm_package_version}.zip *",
     "build:windows": "npm run test && electron-packager . --overwrite --asar --out=dist --ignore='^media$' --prune --platform=win32 --arch=ia32 --icon=static/icon.ico --version-string.ProductName=$npm_package_productName --app-version=$npm_package_version && cd dist/Ramme-win32-ia32 && zip -ryq9 ../Ramme-windows-${npm_package_version}.zip *",
+    "build:osx64": "npm run test && electron-packager . stephen.k.Instagram --overwrite --out=dist --platform=darwin --arch=x64 --icon=static/icon.icns --app-version=$npm_package_version",
     "lint": "eslint .",
     "test": "npm run lint"
   },
