--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Ramme",
-  "version": "2.2.0",
+  "version": "2.2.1",
   "description": "Unofficial Instagram Desktop App",
   "license": "MIT",
   "main": "main.js",
@@ -11,8 +11,9 @@
     "url": "terkel.com"
   },
   "scripts": {
-    "start": "electron .",
-    "build": "npm run build64 && npm run build32",
+    "start": "npm test && electron .",
+    "test": "standard",
+    "build": "npm test && npm run build64 && npm run build32",
     "build64": "npm run build:macos && npm run build:linux && npm run build:windows64",
     "build32": "npm run build:linux32 && npm run build:windows",
     "build:macos": "electron-packager . --overwrite --asar --out=dist --ignore='^media$' --prune --platform=darwin --arch=x64 --icon=static/icon.icns --app-bundle-id=com.terkel.ramme --osx-sign --app-version=$npm_package_version && cd dist/Ramme-darwin-x64 && zip -ryXq9 ../Ramme-osx-${npm_package_version}.zip Ramme.app",
@@ -23,13 +24,16 @@
   },
   "keywords": [
     "Instagram",
-    "Electron"
+    "Electron",
+    "Social",
+    "Client"
   ],
   "devDependencies": {
     "devtron": "^1.3.0",
     "electron": "^1.3.3",
     "electron-packager": "^7.6.0",
-    "os": "^0.1.1"
+    "os": "^0.1.1",
+    "standard": "^8.0.0"
   },
   "dependencies": {
     "electron-config": "^0.2.1",
