--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
     "electron-config": "^0.2.1",
     "electron-debug": "^1.0.1",
     "element-ready": "^0.2.0"
+  },
+  "standard": {
+    "globals": [ "Notification" ]
   }
 }
