Fixed typo in repo url

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "repository": "terkel/ramme",
+  "repository": "terkelg/ramme",
   "author": "Terkel Gjervig",
   "license": "MIT",
   "scripts": {
