Lets try with x64 on win

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
-os:
-  - osx
-  - linux
+matrix:
+  include:
+    - os: linux
+      dist: trusty
+      sudo: required
+    - os: osx
 
 language: node_js
-sudo: false
 node_js: node
 
 install:
