--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "echo \"custom before build (test, gukp) here\" && gulp",
     "prestart": "gulp",
     "start": "electron app",
-    "pack": "npm run build && build --dir",
-    "dist": "npm run build && build"
+    "pack": "npm run build && build --dir --x64",
+    "dist": "npm run build && build --x64"
   },
   "build": {
     "appId": "com.terkel.ramme",
