try new build matrix

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,9 @@ cache:
   directories:
     - node_modules
 
-matrix:
-  include:
-    - os: osx
-    - os: linux
-      sudo: required
-      dist: trusty
+os:
+  - osx
+  - linux
 
 script:
   - npm run dist
