--- a/app/package.json
+++ b/app/package.json
@@ -26,6 +26,7 @@
     "electron-is-dev": "^0.1.2",
     "element-ready": "^0.2.0",
     "first-run": "^1.2.0",
+    "insight": "^0.8.3",
     "ms": "^0.7.2",
     "os": "^0.1.1"
   }
