--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "test": "standard",
-    "build": "npm run test && gulp build",
+    "build": "gulp build",
     "prestart": "npm run build",
     "start": "electron app",
     "pack": "npm run build && build --dir",
@@ -24,15 +24,13 @@
   },
   "devDependencies": {
     "babel-plugin-transform-es2015-modules-commonjs": "^6.18.0",
-    "copy-webpack-plugin": "^4.0.0",
     "del": "^2.2.2",
     "electron": "^1.4.5",
-    "electron-builder": "^8.5.3",
+    "electron-builder": "^11.3.0",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-babel": "^6.1.2",
-    "gulp-sass": "^2.3.2",
-    "standard": "^8.5.0",
-    "webpack": "^1.13.3"
+    "gulp-sass": "^3.1.0",
+    "standard": "^8.5.0"
   },
   "babel": {
     "plugins": [
