--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,7 +2,7 @@ environment:
   nodejs_version: '6'
 
 platform:
-  - x64
+  - x86
 
 cache:
   - node_modules
@@ -20,4 +20,4 @@ test_script:
 build_script:
   - node --version
   - npm --version
-  - npm run dist -- --x64
+  - npm run dist --ia32 --x64
