--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "author": "Terkel Gjervig",
   "license": "MIT",
   "scripts": {
+    "postinstall": "cd app && npm install",
     "test": "standard",
     "build": "gulp build",
     "prestart": "npm run build",
@@ -23,14 +24,14 @@
     }
   },
   "devDependencies": {
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.18.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
     "del": "^2.2.2",
-    "electron": "^1.4.5",
-    "electron-builder": "^11.3.0",
+    "electron": "^1.6.6",
+    "electron-builder": "^17.3.1",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-babel": "^6.1.2",
     "gulp-sass": "^3.1.0",
-    "standard": "^8.5.0"
+    "standard": "^10.0.2"
   },
   "babel": {
     "plugins": [
