--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "linux": {
       "target": [
         "deb",
+        "rpm",
+        "pacman",
+        "snap",
         "AppImage"
       ]
     }
@@ -26,11 +29,13 @@
   "devDependencies": {
     "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
     "del": "^2.2.2",
-    "electron": "^1.6.6",
+    "electron": "^1.6.8",
     "electron-builder": "^17.3.1",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-babel": "^6.1.2",
     "gulp-sass": "^3.1.0",
+    "gulp-autoprefixer": "^4.0.0",
+    "gulp-image": "^2.8.0",
     "standard": "^10.0.2"
   },
   "standard": {
