--- a/package.json
+++ b/package.json
@@ -14,38 +14,32 @@
   "build": {
     "appId": "com.terkel.ramme",
     "mac": {
-      "category": "public.app-category.social-networking"
+      "category": "public.app-category.social-networking",
     },
     "linux": {
       "target": [
         "deb",
-        "rpm",
-        "pacman",
-        "snap",
         "AppImage"
       ]
     }
   },
   "devDependencies": {
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
+    "babel-preset-babili": "^0.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babili": "^0.1.2",
     "del": "^2.2.2",
     "electron": "^1.6.8",
     "electron-builder": "^17.3.1",
     "gulp": "github:gulpjs/gulp#4.0",
-    "gulp-babel": "^6.1.2",
-    "gulp-sass": "^3.1.0",
     "gulp-autoprefixer": "^4.0.0",
+    "gulp-babel": "^6.1.2",
     "gulp-image": "^2.8.0",
+    "gulp-sass": "^3.1.0",
     "standard": "^10.0.2"
   },
   "standard": {
     "ignore": [
       "app/dist"
-    ]
-  },
-  "babel": {
-    "plugins": [
-      "transform-es2015-modules-commonjs"
     ]
   }
 }
