--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+dist: trusty
 sudo: required
 osx_image: xcode8
 
@@ -23,7 +24,6 @@ addons:
       - xz-utils
       - rpm
       - bsdtar
-      - snapcraft
       - gcc-multilib
       - g++-multilib
 
