RPM & Pacman packages (#123)
* trigger more packages

* add snap packages, add more information for linux package

* remove dep

* add snapcraft for building snap packages

* attempt to fix snap builds

* remove snap support, snapcraft not available on trusty

--- a/package.json
+++ b/package.json
@@ -17,8 +17,14 @@
       "category": "public.app-category.social-networking"
     },
     "linux": {
+      "synopsis": "Unofficial Instagram Desktop App",
+      "category": "Internet",
+      "packageCategory": "Network;",
       "target": [
         "deb",
+        "rpm",
+        "pacman",
+        "tar.gz",
         "AppImage"
       ]
     }
