--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,7 @@
+dist: trusty
+sudo: required
+osx_image: xcode8
+
 language: node_js
 node_js: 6
 
@@ -5,15 +9,29 @@ cache:
   directories:
     - node_modules
 
-os:
-  - osx
-  - linux
+matrix:
+  include:
+    - os: osx
+    - os: linux
+      env: CC=clang CXX=clang++ npm_config_clang=1
+      compiler: clang
+
+addons:
+  apt:
+    packages:
+      - icnsutils
+      - graphicsmagick
+      - xz-utils
+      - rpm
+      - bsdtar
+      - gcc-multilib
+      - g++-multilib
 
 before_script:
   - npm prune
 
 script:
-  - npm run dist
+  - npm run dist --ia32 --x64
 
 notifications:
   slack: ramme:44ubE4BVf3FGi8OldEKL743J
