--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "prestart": "npm run build",
     "start": "electron app",
     "pack": "npm run build && build --dir",
-    "dist": "npm run build && build"
+    "dist": "npm run build && build --ia32 --x64"
   },
   "build": {
     "appId": "com.terkel.ramme",
