Dark mode fixes mostly
-Few dark mode fixes
-Added task 'dev' to make style changes easier
-Added html to gulp config so preloader gets copied to 'dist' folder as it should

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "postinstall": "cd app && npm install",
     "test": "standard",
     "build": "gulp build",
+    "dev": "gulp dev & electron app",
     "prestart": "npm run build",
     "start": "electron app",
     "pack": "npm run build && build --dir",
