--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,16 @@
 language: node_js
-node_js: 6
-
-cache:
-  directories:
-    - node_modules
+node_js: 8
 
 os:
   - osx
   - linux
+
+cache:
+  yarn: true
+  directories:
+    - node_modules
+    - "$HOME/.electron"
+    - "$HOME/.cache"
 
 addons:
   apt:
@@ -20,11 +23,8 @@ addons:
       - gcc-multilib
       - g++-multilib
 
-before_script:
-  - npm prune
-
 script:
-  - npm run dist
+  - yarn run build
 
 notifications:
   slack: ramme:44ubE4BVf3FGi8OldEKL743J
