--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,23 +1,30 @@
-environment:
-  nodejs_version: '6'
+version: 0.1.{build}
 
+branches:
+  only:
+    - master
+
+image: Visual Studio 2017
 platform:
-  - x86
+  - x64
 
 cache:
   - node_modules
+  - '%APPDATA%\npm-cache'
   - '%USERPROFILE%\.electron'
+  - '%USERPROFILE%\AppData\Local\Yarn\cache'
+
+init:
+  - git config --global core.autocrlf input
 
 install:
-  - ps: Install-Product node $env:nodejs_version
-  - npm install
-  - npm install npm -g
-  - npm prune
-
-test_script:
-  - npm run test
+  - ps: Install-Product node 8 x64
+  - choco install yarn --ignore-dependencies
+  - git reset --hard HEAD
+  - yarn
+  - node --version
 
 build_script:
-  - node --version
-  - npm --version
-  - npm run dist
+  - yarn build
+
+test: off
