--- a/package.json
+++ b/package.json
@@ -83,7 +83,9 @@
     "electron-settings": "^3.1.2",
     "electron-window-state": "^4.1.1",
     "element-ui": "^1.4.6",
+    "hasha": "^3.0.0",
     "instagram-private-api": "^0.6.7",
+    "mkdirp": "^0.5.1",
     "nedb": "^1.8.0",
     "vue": "^2.3.3",
     "vue-electron": "^1.0.6",
