Moved login to common lib and tried to fix crash
Moved login logic to common lib and tried to fix app crash without success

Signed-off-by: Anatoli Nicolae <nicolaeanatoli@gmail.com>

--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "lodash": "^4.17.4",
     "mkdirp": "^0.5.1",
     "nedb": "^1.8.0",
+    "touch": "^3.1.0",
     "vue": "^2.3.3",
     "vue-electron": "^1.0.6",
     "vue-router": "^2.5.3",
