--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,20 +1,24 @@
+image: Visual Studio 2017
+
 environment:
   nodejs_version: '8'
 
 platform:
   - x86
+  - x64
 
 cache:
   - node_modules
+  - '%LOCALAPPDATA%\electron\Cache'
+  - '%LOCALAPPDATA%\electron-builder\cache'
   - '%USERPROFILE%\.electron'
 
 install:
-  - ps: Install-Product node $env:nodejs_version
-  - npm install
-  - npm install npm -g
+  - ps: Install-Product node 8 x64
+  - yarn
 
 test_script:
-  - npm run test
+  - yarn test
 
 build_script:
-  - npm run dist
+  - yarn dist
