--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ install:
   - curl -L https://yarnpkg.com/latest.tar.gz | tar xvz && mv yarn-* $HOME/.yarn
   - export PATH="$HOME/.yarn/bin:$PATH"
   - yarn
+  - yarn test
 
 script:
   - yarn dist
