--- a/package.json
+++ b/package.json
@@ -89,8 +89,9 @@
     "touch": "^3.1.0",
     "vue": "^2.4.4",
     "vue-electron": "^1.0.6",
-    "vue-router": "^2.7.0",
-    "vuex": "^2.4.1"
+    "vue-perfect-scrollbar": "^0.0.14",
+    "vue-router": "^3.0.0",
+    "vuex": "^3.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -109,7 +110,7 @@
     "del": "^3.0.0",
     "devtron": "^1.4.0",
     "electron": "^1.7.9",
-    "electron-builder": "^19.35.1",
+    "electron-builder": "^19.36.0",
     "electron-debug": "^1.4.0",
     "electron-devtools-installer": "^2.2.0",
     "eslint": "^4.8.0",
@@ -134,10 +135,10 @@
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
     "vue-html-loader": "^1.2.4",
-    "vue-loader": "^13.2.1",
+    "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.3",
     "vue-template-compiler": "^2.4.4",
-    "webpack": "^3.6.0",
+    "webpack": "^3.7.1",
     "webpack-dev-server": "^2.9.1",
     "webpack-hot-middleware": "^2.19.1"
   }
