Removed useless mixins, added like heart animation and minor style fixes
Added post date humanization :squirrel:, compiles LESS auto-prefixing :computer:, switched from background-image to mask-image for colored icons :sunglasses: and fixed post grid :tada:

--- a/package.json
+++ b/package.json
@@ -88,9 +88,11 @@
     "nedb": "^1.8.0",
     "touch": "^3.1.0",
     "vue": "^2.5.0",
+    "vue-click-helper": "^0.0.2",
     "vue-electron": "^1.0.6",
     "vue-perfect-scrollbar": "^0.0.14",
     "vue-router": "^3.0.0",
+    "vue-timeago": "^3.3.6",
     "vuex": "^3.0.0"
   },
   "devDependencies": {
