Travis stuff fix after build

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,9 @@ addons:
 script:
   - yarn build
 
+after_script:
+  - set +e # Disable errors to work around Travis not knowing how to fix their stuff.
+
 notifications:
   slack: ramme:44ubE4BVf3FGi8OldEKL743J
   email: false
