--- a/package.json
+++ b/package.json
@@ -76,9 +76,9 @@
     }
   },
   "dependencies": {
-    "axios": "^0.17.0",
+    "axios": "^0.17.1",
     "electron-positioner": "^3.0.0",
-    "electron-settings": "^3.1.3",
+    "electron-settings": "^3.1.4",
     "electron-window-state": "^4.1.1",
     "hasha": "^3.0.0",
     "instagram-private-api": "^0.6.7",
@@ -86,18 +86,18 @@
     "mkdirp": "^0.5.1",
     "normalize.css": "^7.0.0",
     "touch": "^3.1.0",
-    "vue": "^2.5.2",
-    "vue-agile": "^0.3.5",
+    "vue": "^2.5.13",
+    "vue-agile": "^0.3.6",
     "vue-click-helper": "^0.0.2",
     "vue-electron": "^1.0.6",
-    "vue-perfect-scrollbar": "^0.0.14",
+    "vue-perfect-scrollbar": "^0.1.0",
     "vue-router": "^3.0.1",
-    "vue-timeago": "^3.4.0",
-    "vuex": "^3.0.0"
+    "vue-timeago": "^3.4.2",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
-    "babel-eslint": "^8.0.1",
+    "babel-eslint": "^8.2.1",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
@@ -106,42 +106,42 @@
     "babili-webpack-plugin": "^0.1.2",
     "cfonts": "^1.1.3",
     "chalk": "^2.3.0",
-    "copy-webpack-plugin": "^4.2.0",
-    "cross-env": "^5.1.1",
-    "css-loader": "^0.28.7",
+    "copy-webpack-plugin": "^4.3.1",
+    "cross-env": "^5.1.3",
+    "css-loader": "^0.28.9",
     "del": "^3.0.0",
     "devtron": "^1.4.0",
-    "electron": "^1.7.9",
-    "electron-builder": "^19.43.0",
-    "electron-debug": "^1.4.0",
-    "electron-devtools-installer": "^2.2.1",
-    "eslint": "^4.10.0",
-    "eslint-config-standard": "^10.2.1",
+    "electron": "^1.7.11",
+    "electron-builder": "^19.55.2",
+    "electron-debug": "^1.5.0",
+    "electron-devtools-installer": "^2.2.3",
+    "eslint": "^4.16.0",
+    "eslint-config-standard": "^11.0.0-beta.0",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.9.0",
-    "eslint-plugin-html": "^4.0.0-alpha.1",
+    "eslint-plugin-html": "^4.0.2",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-node": "^5.2.1",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
     "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.5",
+    "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.30.1",
     "less": "^3.0.0-alpha.3",
     "less-loader": "^4.0.5",
     "multispinner": "^0.2.1",
     "node-loader": "^0.6.0",
-    "node-sass": "^4.5.3",
-    "postcss-loader": "^2.0.8",
+    "node-sass": "^4.7.2",
+    "postcss-loader": "^2.0.10",
     "sass-loader": "^6.0.6",
-    "style-loader": "^0.19.0",
+    "style-loader": "^0.19.1",
     "url-loader": "^0.6.2",
     "vue-html-loader": "^1.2.4",
-    "vue-loader": "^13.3.0",
-    "vue-style-loader": "^3.0.3",
-    "vue-template-compiler": "^2.5.2",
-    "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.3",
-    "webpack-hot-middleware": "^2.20.0"
+    "vue-loader": "^13.7.0",
+    "vue-style-loader": "^3.1.1",
+    "vue-template-compiler": "^2.5.13",
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.11.1",
+    "webpack-hot-middleware": "^2.21.0"
   }
 }
