--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "electron-positioner": "^3.0.0",
     "electron-settings": "^3.1.4",
     "electron-window-state": "^4.1.1",
+    "element-ui": "^2.2.0",
     "hasha": "^3.0.0",
     "instagram-private-api": "^0.6.7",
     "lodash": "^4.17.5",
@@ -105,14 +106,14 @@
     "babel-register": "^6.26.0",
     "babili-webpack-plugin": "^0.1.2",
     "cfonts": "^1.1.3",
-    "chalk": "^2.3.0",
+    "chalk": "^2.3.1",
     "copy-webpack-plugin": "^4.4.1",
     "cross-env": "^5.1.3",
     "css-loader": "^0.28.9",
     "del": "^3.0.0",
     "devtron": "^1.4.0",
     "electron": "^1.8.2",
-    "electron-builder": "^19.56.0",
+    "electron-builder": "^20.0.4",
     "electron-debug": "^1.5.0",
     "electron-devtools-installer": "^2.2.3",
     "eslint": "^4.17.0",
@@ -127,7 +128,7 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.30.1",
-    "less": "^3.0.0-alpha.3",
+    "less": "^3.0.0",
     "less-loader": "^4.0.5",
     "multispinner": "^0.2.1",
     "node-loader": "^0.6.0",
@@ -138,9 +139,9 @@
     "url-loader": "^0.6.2",
     "vue-html-loader": "^1.2.4",
     "vue-loader": "^14.1.1",
-    "vue-style-loader": "^3.1.2",
+    "vue-style-loader": "^4.0.2",
     "vue-template-compiler": "^2.5.13",
-    "webpack": "^3.10.0",
+    "webpack": "^3.11.0",
     "webpack-dev-server": "^2.11.1",
     "webpack-hot-middleware": "^2.21.0"
   }
