--- a/package.json
+++ b/package.json
@@ -128,14 +128,13 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.30.1",
-    "less": "^3.0.0",
-    "less-loader": "^4.0.5",
     "multispinner": "^0.2.1",
     "node-loader": "^0.6.0",
     "node-sass": "^4.7.2",
     "postcss-loader": "^2.1.0",
+    "resolve-url-loader": "^2.2.1",
     "sass-loader": "^6.0.6",
-    "style-loader": "^0.20.1",
+    "style-loader": "^0.20.2",
     "url-loader": "^0.6.2",
     "vue-html-loader": "^1.2.4",
     "vue-loader": "^14.1.1",
