Not sure what `eslint-import-resolver-node` fixed,
but it did do something.

Signed-off-by: Anatoli Nicolae <nicolaeanatoli@gmail.com>

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "del": "^3.0.0",
     "electron": "^2.0.3",
     "electron-builder": "^20.18.0",
+    "eslint-import-resolver-node": "^0.3.2",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-autoprefixer": "^5.0.0",
     "gulp-babel": "^7.0.1",
